fixed aligment on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -258,7 +258,6 @@ label {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: scroll;
-  justify-content: center;
 }
 
 .tech-chip {
